error and elevation the slopppiest
